Fix BrokenPipeError when piping search results through head.

--- a/nbs/cli/display.ipynb
+++ b/nbs/cli/display.ipynb
@@ -34,12 +34,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "075b84b1-04da-46ea-a9cd-4962dd026a90",
+   "id": "9509362e-0def-4238-af77-9d6d056aea77",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "from typing import Dict, List, Tuple, Any, Optional\n",
+    "import signal\n",
+    "import sys\n",
+    "import errno\n",
     "from cjm_fasthtml_tailwind.cli.utils import (\n",
     "    SearchResult, discover_utility_modules,\n",
     "    load_code_from_file, display_items_generic, handle_module_not_found,\n",
@@ -67,10 +70,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9bef669-a401-4c84-b7a9-0c05efd87bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "# Handle broken pipe errors gracefully when output is piped\n",
+    "def _handle_broken_pipe():\n",
+    "    \"\"\"Set up signal handlers to gracefully handle broken pipes.\"\"\"\n",
+    "    # Ignore SIGPIPE on Unix-like systems\n",
+    "    try:\n",
+    "        signal.signal(signal.SIGPIPE, signal.SIG_DFL)\n",
+    "    except AttributeError:\n",
+    "        # SIGPIPE doesn't exist on Windows\n",
+    "        pass\n",
+    "\n",
+    "# Call the handler on module import\n",
+    "_handle_broken_pipe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "03485b57-77ed-4dba-b8e5-672f14e3f301",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| export\n",
+    "def safe_print(*args, **kwargs):\n",
+    "    \"\"\"Print with broken pipe error handling.\n",
+    "    \n",
+    "    This wrapper function catches BrokenPipeError and IOError exceptions\n",
+    "    that occur when output is piped to commands like head, tail, etc.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        print(*args, **kwargs)\n",
+    "    except BrokenPipeError:\n",
+    "        # Exit cleanly when pipe is broken\n",
+    "        sys.exit(0)\n",
+    "    except IOError as e:\n",
+    "        if e.errno == errno.EPIPE:  # Broken pipe error\n",
+    "            sys.exit(0)\n",
+    "        raise  # Re-raise other IO errors"
+   ]
   },
   {
    "cell_type": "code",
@@ -610,44 +652,54 @@
     "        print(f\"No results found for '{query}'\")\n",
     "        return\n",
     "    \n",
-    "    print(f\"Search Results for '{query}':\")\n",
-    "    print(\"=\" * 60)\n",
-    "    \n",
-    "    # Group results by content type\n",
-    "    by_type = {}\n",
-    "    for result in results:\n",
-    "        if result.content_type not in by_type:\n",
-    "            by_type[result.content_type] = []\n",
-    "        by_type[result.content_type].append(result)\n",
-    "    \n",
-    "    # Display results by type\n",
-    "    for content_type, type_results in by_type.items():\n",
-    "        print(f\"\\n{content_type.title()}s ({len(type_results)} results)\")\n",
-    "        print(\"-\" * 40)\n",
+    "    try:\n",
+    "        print(f\"Search Results for '{query}':\")\n",
+    "        print(\"=\" * 60)\n",
     "        \n",
-    "        for result in type_results:\n",
-    "            print(f\"\\n  {result.item_name} ({result.module_name} module)\")\n",
-    "            print(f\"  Found in: {result.match_location}\")\n",
-    "            print(f\"  Context: {result.match_context}\")\n",
+    "        # Group results by content type\n",
+    "        by_type = {}\n",
+    "        for result in results:\n",
+    "            if result.content_type not in by_type:\n",
+    "                by_type[result.content_type] = []\n",
+    "            by_type[result.content_type].append(result)\n",
+    "        \n",
+    "        # Display results by type\n",
+    "        for content_type, type_results in by_type.items():\n",
+    "            print(f\"\\n{content_type.title()}s ({len(type_results)} results)\")\n",
+    "            print(\"-\" * 40)\n",
     "            \n",
-    "            # Show how to view the full item\n",
-    "            if result.content_type == 'factory':\n",
-    "                view_cmd = get_view_command('factory', result.module_name, result.item_name)\n",
-    "            elif result.content_type == 'example':\n",
-    "                # Extract feature from name\n",
-    "                feature = result.item_name.replace(f'test_{result.module_name}_', '').replace('_examples', '')\n",
-    "                view_cmd = get_view_command('example', result.module_name, feature)\n",
-    "            elif result.content_type == 'helper':\n",
-    "                view_cmd = get_view_command('helper', result.module_name, result.item_name)\n",
-    "            elif result.content_type == 'module':\n",
-    "                view_cmd = get_view_command('module', result.module_name, result.module_name)\n",
-    "            else:\n",
-    "                view_cmd = \"\"\n",
-    "            \n",
-    "            if view_cmd:\n",
-    "                print(f\"  View with: {view_cmd}\")\n",
-    "    \n",
-    "    print(f\"\\nTotal results: {len(results)}\")"
+    "            for result in type_results:\n",
+    "                print(f\"\\n  {result.item_name} ({result.module_name} module)\")\n",
+    "                print(f\"  Found in: {result.match_location}\")\n",
+    "                print(f\"  Context: {result.match_context}\")\n",
+    "                \n",
+    "                # Show how to view the full item\n",
+    "                if result.content_type == 'factory':\n",
+    "                    view_cmd = get_view_command('factory', result.module_name, result.item_name)\n",
+    "                elif result.content_type == 'example':\n",
+    "                    # Extract feature from name\n",
+    "                    feature = result.item_name.replace(f'test_{result.module_name}_', '').replace('_examples', '')\n",
+    "                    view_cmd = get_view_command('example', result.module_name, feature)\n",
+    "                elif result.content_type == 'helper':\n",
+    "                    view_cmd = get_view_command('helper', result.module_name, result.item_name)\n",
+    "                elif result.content_type == 'module':\n",
+    "                    view_cmd = get_view_command('module', result.module_name, result.module_name)\n",
+    "                else:\n",
+    "                    view_cmd = \"\"\n",
+    "                \n",
+    "                if view_cmd:\n",
+    "                    print(f\"  View with: {view_cmd}\")\n",
+    "        \n",
+    "        print(f\"\\nTotal results: {len(results)}\")\n",
+    "    except BrokenPipeError:\n",
+    "        # Gracefully handle broken pipes when output is piped\n",
+    "        # Exit cleanly without error message\n",
+    "        sys.exit(0)\n",
+    "    except IOError as e:\n",
+    "        # Handle other IO errors (e.g., when stdout is closed)\n",
+    "        if e.errno == errno.EPIPE:  # Broken pipe\n",
+    "            sys.exit(0)\n",
+    "        raise  # Re-raise other IO errors"
    ]
   },
   {
