--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -39,27 +39,13 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from typing import Dict, List, Tuple, Any, Optional\n",
-    "from cjm_fasthtml_tailwind.cli.utils import (\n",
-    "    SearchResult, discover_utility_modules,\n",
-    "    load_code_from_file, display_items_generic, handle_module_not_found,\n",
-    "    find_usage_in_items, get_view_command, format_usage_examples, simple_item_formatter,\n",
-    "    indented_item_formatter, list_utility_modules\n",
-    ")\n",
-    "from cjm_fasthtml_tailwind.cli.factory_extraction import (\n",
-    "    list_all_factories, list_module_factories, get_factory_by_name\n",
-    ")\n",
-    "from cjm_fasthtml_tailwind.cli.example_discovery import (\n",
-    "    list_all_examples, get_example_by_name, list_module_examples\n",
-    ")\n",
-    "from cjm_fasthtml_tailwind.cli.helper_discovery import get_module_helpers\n",
+    "from typing import Optional\n",
+    "from cjm_fasthtml_tailwind.cli.utils import load_code_from_file\n",
     "from cjm_fasthtml_tailwind.cli.search import search_all\n",
-    "from cjm_fasthtml_tailwind.cli.core_utils_discovery import get_core_utilities\n",
     "from cjm_fasthtml_tailwind.cli.test_code import execute_test_code\n",
-    "from cjm_fasthtml_tailwind.cli.imports import get_recommended_imports\n",
     "from cjm_fasthtml_tailwind.cli.pattern_scanner import (\n",
     "    analyze_and_suggest_input, display_input_analysis, \n",
-    "    InputType, detect_input_type\n",
+    "    InputType\n",
     ")\n",
     "from cjm_fasthtml_tailwind.cli.cli_config import LibraryConfig, get_active_config\n",
     "\n",
