--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -118,122 +118,117 @@
     "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_utils\n",
     "    cli_display --> cli_factory_extraction\n",
-    "    cli_display --> cli_example_discovery\n",
-    "    cli_display --> cli_test_code\n",
-    "    cli_display --> cli_core_utils_discovery\n",
-    "    cli_display --> cli_cli_config\n",
     "    cli_display --> cli_helper_discovery\n",
-    "    cli_display --> cli_search\n",
     "    cli_display --> cli_imports\n",
-    "    cli_dynamic_examples --> cli_display\n",
+    "    cli_display --> cli_example_discovery\n",
+    "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_search\n",
+    "    cli_display --> cli_cli_config\n",
+    "    cli_display --> cli_test_code\n",
     "    cli_dynamic_examples --> cli_pattern_scanner\n",
+    "    cli_dynamic_examples --> cli_display\n",
     "    cli_dynamic_examples --> cli_utils\n",
     "    cli_dynamic_examples --> cli_factory_extraction\n",
-    "    cli_dynamic_examples --> cli_example_discovery\n",
-    "    cli_dynamic_examples --> cli_test_code\n",
-    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
-    "    cli_dynamic_examples --> cli_cli_config\n",
     "    cli_dynamic_examples --> cli_helper_discovery\n",
-    "    cli_dynamic_examples --> cli_search\n",
     "    cli_dynamic_examples --> cli_imports\n",
+    "    cli_dynamic_examples --> cli_example_discovery\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
+    "    cli_dynamic_examples --> cli_search\n",
+    "    cli_dynamic_examples --> cli_cli_config\n",
+    "    cli_dynamic_examples --> cli_test_code\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_display\n",
-    "    cli_explorer --> cli_dynamic_examples\n",
     "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_display\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
-    "    cli_explorer --> cli_cli_config\n",
-    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_dynamic_examples\n",
     "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_cli_config\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_helper_discovery --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
+    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_cli_config\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
+    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_example_discovery\n",
-    "    cli_test_code --> cli_cli_config\n",
-    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_utils\n",
+    "    cli_test_code --> cli_cli_config\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_accessibility\n",
-    "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> utilities_typography\n",
-    "    core_testing --> core_base\n",
-    "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> core_resources\n",
-    "    utilities_accessibility --> core_testing\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> core_base\n",
+    "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_accessibility\n",
     "    utilities_accessibility --> core_base\n",
+    "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_colors\n",
-    "    utilities_backgrounds --> core_testing\n",
     "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_scales\n",
-    "    utilities_borders --> builders_colors\n",
     "    utilities_borders --> core_testing\n",
+    "    utilities_borders --> builders_colors\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_effects --> core_base\n",
+    "    utilities_effects --> core_testing\n",
     "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_effects --> core_testing\n",
     "    utilities_filters --> core_base\n",
-    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> core_testing\n",
+    "    utilities_filters --> builders_colors\n",
     "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_interactivity --> core_base\n",
-    "    utilities_interactivity --> builders_scales\n",
-    "    utilities_interactivity --> builders_colors\n",
     "    utilities_interactivity --> core_testing\n",
+    "    utilities_interactivity --> builders_colors\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_sizing --> core_testing\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
-    "    utilities_spacing --> builders_scales\n",
-    "    utilities_spacing --> core_testing\n",
+    "    utilities_sizing --> core_testing\n",
     "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> core_testing\n",
+    "    utilities_spacing --> builders_scales\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> core_testing\n",
-    "    utilities_tables --> builders_scales\n",
-    "    utilities_tables --> core_testing\n",
+    "    utilities_svg --> builders_colors\n",
     "    utilities_tables --> core_base\n",
+    "    utilities_tables --> core_testing\n",
+    "    utilities_tables --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
-    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_testing\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_testing\n",
-    "    utilities_typography --> builders_scales\n",
-    "    utilities_typography --> builders_colors\n",
-    "    utilities_typography --> core_testing\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_typography --> core_base\n",
+    "    utilities_typography --> builders_scales\n",
+    "    utilities_typography --> core_testing\n",
+    "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
-    "*119 cross-module dependencies detected*"
+    "*114 cross-module dependencies detected*"
    ]
   },
   {
@@ -296,8 +291,8 @@
     "  2. View factories:       cjm-tailwind-explore factories\n",
     "  3. Search for patterns:  cjm-tailwind-explore search <query>\n",
     "  4. CRITICAL: Test code:  cjm-tailwind-explore test-code \"<code>\"\n",
-    "  5. Get imports:         cjm-tailwind-explore imports\n",
-    "  6. Scan existing code:  cjm-tailwind-explore scan <file>\n",
+    "  5. Get imports:          cjm-tailwind-explore imports\n",
+    "  6. Scan existing code:   cjm-tailwind-explore scan <file>\n",
     "\n",
     "Exploration Workflow:\n",
     "  - Start with 'modules' to see available utility categories\n",
@@ -329,12 +324,12 @@
     "  - All factories support method chaining and attribute access\n",
     "\n",
     "Example Usage Flow:\n",
-    "  cjm-tailwind-explore modules                    # See what's available\n",
-    "  cjm-tailwind-explore factories -m accessibility       # Explore accessibility utilities\n",
-    "  cjm-tailwind-explore factory accessibility forced_color_adjust          # Learn about forced_color_adjust factory\n",
-    "  cjm-tailwind-explore example accessibility fasthtml      # See usage examples\n",
-    "  cjm-tailwind-explore test-code 'print(str(forced_color_adjust.auto))'   # CRITICAL: Test your understanding\n",
-    "  cjm-tailwind-explore scan app.py                # Analyze existing code\n",
+    "  cjm-tailwind-explore modules                                           # See what's available\n",
+    "  cjm-tailwind-explore factories -m accessibility                        # Explore accessibility utilities\n",
+    "  cjm-tailwind-explore factory accessibility forced_color_adjust         # Learn about forced_color_adjust factory\n",
+    "  cjm-tailwind-explore example accessibility fasthtml                    # See usage examples\n",
+    "  cjm-tailwind-explore test-code 'print(str(forced_color_adjust.auto))'  # CRITICAL: Test your understanding\n",
+    "  cjm-tailwind-explore scan app.py                                       # Analyze existing code\n",
     "\n",
     "```\n",
     "\n",
@@ -1957,6 +1952,7 @@
     "\n",
     "```python\n",
     "from cjm_fasthtml_tailwind.cli.display import (\n",
+    "    safe_print,\n",
     "    display_modules,\n",
     "    display_module_factories,\n",
     "    display_all_factories,\n",
@@ -1976,6 +1972,30 @@
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def _handle_broken_pipe():\n",
+    "    \"\"\"Set up signal handlers to gracefully handle broken pipes.\"\"\"\n",
+    "    # Ignore SIGPIPE on Unix-like systems\n",
+    "    try\n",
+    "    \"Set up signal handlers to gracefully handle broken pipes.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def safe_print(*args, **kwargs):\n",
+    "    \"\"\"Print with broken pipe error handling.\n",
+    "    \n",
+    "    This wrapper function catches BrokenPipeError and IOError exceptions\n",
+    "    that occur when output is piped to commands like head, tail, etc.\n",
+    "    \"\"\"\n",
+    "    try\n",
+    "    \"\"\"\n",
+    "    Print with broken pipe error handling.\n",
+    "    \n",
+    "    This wrapper function catches BrokenPipeError and IOError exceptions\n",
+    "    that occur when output is piped to commands like head, tail, etc.\n",
+    "    \"\"\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "def display_modules(\n",
@@ -2774,6 +2794,9 @@
     "    handle_search_command,\n",
     "    handle_test_code_command,\n",
     "    handle_scan_command,\n",
+    "    create_help_description,\n",
+    "    create_example_usage_flow,\n",
+    "    create_help_epilogue,\n",
     "    setup_argument_parser,\n",
     "    main\n",
     ")\n",
@@ -2903,6 +2926,27 @@
     "    args  # TODO: Add type hint and description\n",
     "): # TODO: Add type hint\n",
     "    \"Handle the scan command.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def create_help_description(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    ")\n",
+    "    \"Create a comprehensive description for the CLI tool's help message\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def create_example_usage_flow(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    ")\n",
+    "    \"Create an example usage flow\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def create_help_epilogue(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    ")\n",
+    "    \"Create a comprehensive epilogue for the CLI tool's help message\"\n",
     "```\n",
     "\n",
     "```python\n",
