Update test-code helper text to address f-string gotchas.

--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -388,19 +388,29 @@
     "        '- Shows output or error messages\\n'\n",
     "        '- Validates your understanding before implementation\\n\\n'\n",
     "        'Code can be provided directly or loaded from a file.\\n\\n'\n",
+    "        'QUOTE HANDLING TIPS:\\n'\n",
+    "        '- For simple code, use single quotes: \\'print(\"hello\")\\'\\n'\n",
+    "        '- For code with single quotes, use double quotes: \"print(\\'hello\\')\"\\n'\n",
+    "        '- For complex code with mixed quotes, save to a file: --file code.py\\n'\n",
+    "        '- F-strings with dictionary access: use variables or .get() method\\n'\n",
+    "        '  Instead of: f\"{obj.attrs[\\\\\"key\\\\\"]}\"\\n'\n",
+    "        '  Use: key=\"key\"; f\"{obj.attrs[key]}\" or f\"{obj.attrs.get(\\'key\\')}\"\\n\\n'\n",
     "        'Code format notes:\\n'\n",
     "        f'- Single-line statements work: \"{example_code}; {example_code}\"\\n'\n",
     "        '- Control flow requires multiline format (no semicolons):\\n'\n",
     "        '  Use: $\\'for i in [1,2]:\\\\n    print(p(i))\\'\\n'\n",
     "        '  NOT: \"for i in [1,2]: print(p(i))\"\\n'\n",
-    "        '- F-strings are fully supported'\n",
     "    )\n",
     "    \n",
     "    epilog = '⚠️  REMEMBER: Always test code before using it in production!\\n\\n'\n",
     "    epilog += 'Examples:\\n'\n",
-    "    epilog += f'  {config.cli_command} test-code \"{example_code}\"\\n'\n",
+    "    epilog += f'  {config.cli_command} test-code \\'{example_code}\\'\\n'\n",
     "    epilog += f'  {config.cli_command} test-code --file snippet.py\\n'\n",
-    "    epilog += f'  {config.cli_command} test-code \"{combine_example}\" --show-imports'\n",
+    "    epilog += f'  {config.cli_command} test-code \\'{combine_example}\\' --show-imports\\n\\n'\n",
+    "    epilog += 'For complex code with quotes:\\n'\n",
+    "    epilog += '  # Save to file first\\n'\n",
+    "    epilog += '  echo \\'<your-code-here>\\' > test.py\\n'\n",
+    "    epilog += f'  {config.cli_command} test-code --file test.py'\n",
     "    \n",
     "    parser = subparsers.add_parser(\n",
     "        'test-code', \n",
@@ -418,7 +428,7 @@
     "    parser.add_argument(\n",
     "        '--file', '-f',\n",
     "        type=str,\n",
-    "        help='Load code from a file'\n",
+    "        help='Load code from a file (recommended for complex code with quotes)'\n",
     "    )\n",
     "    parser.add_argument(\n",
     "        '--show-imports',\n",
