--- a/nbs/cli/display.ipynb
+++ b/nbs/cli/display.ipynb
@@ -906,14 +906,35 @@
     "        if stderr:\n",
     "            print(\"\\nError:\")\n",
     "            print(stderr)\n",
+    "            \n",
+    "            # Check for common f-string issues and provide specific help\n",
+    "            if \"f-string: invalid syntax\" in stderr or \"f-string expression part cannot include a backslash\" in stderr:\n",
+    "                print(\"\\n💡 F-string Tip:\")\n",
+    "                print(\"When using f-strings with dictionary access in the CLI, avoid quotes in brackets.\")\n",
+    "                print(\"Instead of: f\\\"{obj.attrs[\\\"key\\\"]}\\\"\")\n",
+    "                print(\"Try one of these approaches:\")\n",
+    "                print(\"  1. Use a variable: key = \\\"key\\\"; f\\\"{obj.attrs[key]}\\\"\")\n",
+    "                print(\"  2. Use .get(): f\\\"{obj.attrs.get('key')}\\\"\")\n",
+    "                print(\"  3. Save to variable first: val = obj.attrs[\\\"key\\\"]; f\\\"{val}\\\"\")\n",
+    "                print(\"\\nFor multi-line code with proper quotes, save to a file and use:\")\n",
+    "                print(f\"  {config.cli_command} test-code --file yourcode.py\")\n",
+    "            elif \"NameError\" in stderr and \"[class]\" in stderr:\n",
+    "                print(\"\\n💡 Dictionary Access Tip:\")\n",
+    "                print(\"It looks like quotes were stripped from your dictionary key.\")\n",
+    "                print(\"This often happens when passing code through the shell.\")\n",
+    "                print(\"\\nFor complex code with quotes, save to a file and use:\")\n",
+    "                print(f\"  {config.cli_command} test-code --file yourcode.py\")\n",
+    "                print(\"\\nOr use single quotes for the entire code and escape internal quotes:\")\n",
+    "                print(f\"  {config.cli_command} test-code 'print(obj.attrs[\\\"class\\\"])'\")\n",
     "    \n",
-    "    # Show helpful tips\n",
-    "    if not success:\n",
+    "    # Show helpful tips for general failures\n",
+    "    if not success and \"f-string\" not in stderr and \"NameError\" not in stderr:\n",
     "        print(\"\\nTips:\")\n",
     "        print(f\"- Check that all factory names are correct (use '{config.cli_command} factories')\")\n",
     "        print(f\"- Verify function signatures (use '{config.cli_command} helper <module> <name>')\")\n",
     "        print(f\"- Look at examples for usage patterns (use '{config.cli_command} examples')\")\n",
-    "        print(f\"- Search for specific patterns (use '{config.cli_command} search <query>')\")"
+    "        print(f\"- Search for specific patterns (use '{config.cli_command} search <query>')\")\n",
+    "        print(f\"- For complex code, save to a file: '{config.cli_command} test-code --file code.py'\")"
    ]
   },
   {
