Update test-code helper text to address f-string gotchas.

--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -389,17 +389,22 @@
     "        '- Validates your understanding before implementation\\n\\n'\n",
     "        'Code can be provided directly or loaded from a file.\\n\\n'\n",
     "        'QUOTE HANDLING TIPS:\\n'\n",
-    "        '- For simple code, use single quotes: \\'print(\"hello\")\\'\\n'\n",
-    "        '- For code with single quotes, use double quotes: \"print(\\'hello\\')\"\\n'\n",
-    "        '- For complex code with mixed quotes, save to a file: --file code.py\\n'\n",
-    "        '- F-strings with dictionary access: use variables or .get() method\\n'\n",
-    "        '  Instead of: f\"{obj.attrs[\\\\\"key\\\\\"]}\"\\n'\n",
-    "        '  Use: key=\"key\"; f\"{obj.attrs[key]}\" or f\"{obj.attrs.get(\\'key\\')}\"\\n\\n'\n",
+    "        '- For simple code, use single quotes around entire command:\\n'\n",
+    "        '  ✅ \\'print(\"hello\")\\'\\n'\n",
+    "        '  ✅ \\'x = {\"key\": \"value\"}; print(x)\\'\\n'\n",
+    "        '- For f-strings with dictionary access, these patterns WORK:\\n'\n",
+    "        '  ✅ \\'key = \"name\"; print(f\"Value: {obj.attrs[key]}\")\\'\\n'\n",
+    "        '  ✅ \\'print(f\"Value: {obj.attrs.get(\\'\\'name\\'\\')}\")\\' (doubled single quotes)\\n'\n",
+    "        '  ❌ \\'print(f\"Value: {obj.attrs[\\\\\"name\\\\\"]}\")\\' (backslash escaping fails)\\n'\n",
+    "        '  ❌ \"print(f\\'Value: {obj.attrs[\"name\"]}\\')\" (nested quotes confuse shell)\\n'\n",
+    "        '- For complex code with mixed quotes, save to file: --file code.py\\n\\n'\n",
     "        'Code format notes:\\n'\n",
-    "        f'- Single-line statements work: \"{example_code}; {example_code}\"\\n'\n",
+    "        f'- Single-line statements work: \\'{example_code}; {example_code}\\'\\n'\n",
     "        '- Control flow requires multiline format (no semicolons):\\n'\n",
-    "        '  Use: $\\'for i in [1,2]:\\\\n    print(p(i))\\'\\n'\n",
-    "        '  NOT: \"for i in [1,2]: print(p(i))\"\\n'\n",
+    "        '  ✅ Use: $\\'for i in [1,2]:\\\\n    print(i)\\'\\n'\n",
+    "        '  ❌ NOT: \\'for i in [1,2]: print(i)\\' (needs newline after colon)\\n'\n",
+    "        '- Multiple statements can use semicolons:\\n'\n",
+    "        '  ✅ \\'x = 5; y = 10; print(x + y)\\'\\n'\n",
     "    )\n",
     "    \n",
     "    epilog = '⚠️  REMEMBER: Always test code before using it in production!\\n\\n'\n",
@@ -407,9 +412,17 @@
     "    epilog += f'  {config.cli_command} test-code \\'{example_code}\\'\\n'\n",
     "    epilog += f'  {config.cli_command} test-code --file snippet.py\\n'\n",
     "    epilog += f'  {config.cli_command} test-code \\'{combine_example}\\' --show-imports\\n\\n'\n",
+    "    epilog += 'Working with f-strings:\\n'\n",
+    "    epilog += '  # Method 1: Use a variable for the key\\n'\n",
+    "    epilog += f'  {config.cli_command} test-code \\'key = \"name\"; print(f\"{{data[key]}}\")\\'\\n\\n'\n",
+    "    epilog += '  # Method 2: Use .get() with doubled single quotes\\n'\n",
+    "    epilog += f'  {config.cli_command} test-code \\'print(f\"{{data.get(\\'\\'name\\'\\')}}\")\\'\\n\\n'\n",
     "    epilog += 'For complex code with quotes:\\n'\n",
-    "    epilog += '  # Save to file first\\n'\n",
-    "    epilog += '  echo \\'<your-code-here>\\' > test.py\\n'\n",
+    "    epilog += '  # Save to file first (preserves all quotes correctly)\\n'\n",
+    "    epilog += '  cat > test.py << \\'EOF\\'\\n'\n",
+    "    epilog += '  data = {\"name\": \"value\", \"type\": \"example\"}\\n'\n",
+    "    epilog += '  print(f\"Name: {data[\\'name\\']}, Type: {data[\\'type\\']}\")\\n'\n",
+    "    epilog += '  EOF\\n'\n",
     "    epilog += f'  {config.cli_command} test-code --file test.py'\n",
     "    \n",
     "    parser = subparsers.add_parser(\n",
