Add contextual navigation helper text to CLI tool.

--- a/nbs/cli/display.ipynb
+++ b/nbs/cli/display.ipynb
@@ -117,6 +117,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0dknhx5tdc5l",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def show_navigation_breadcrumbs(\n",
+    "    breadcrumbs: List[str],  # List of breadcrumb items\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
+    "):\n",
+    "    \"\"\"Display navigation breadcrumbs.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "    \n",
+    "    if breadcrumbs:\n",
+    "        breadcrumb_str = \" › \".join(breadcrumbs)\n",
+    "        print(f\"\\n📍 Navigation: {breadcrumb_str}\")\n",
+    "        print(\"=\" * 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sjikhjp25p",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def show_related_commands(\n",
+    "    commands: List[Tuple[str, str]],  # List of (description, command) tuples\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
+    "):\n",
+    "    \"\"\"Display related navigation commands.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "    \n",
+    "    if commands:\n",
+    "        print(\"\\n🔗 Related Commands:\")\n",
+    "        print(\"-\" * 40)\n",
+    "        \n",
+    "        # Calculate max width for alignment\n",
+    "        max_desc_width = max(len(desc) for desc, _ in commands) if commands else 0\n",
+    "        \n",
+    "        for description, command in commands:\n",
+    "            # Use arrow symbols for navigation\n",
+    "            if \"back\" in description.lower() or \"parent\" in description.lower():\n",
+    "                arrow = \"←\"\n",
+    "            elif \"home\" in description.lower() or \"all\" in description.lower():\n",
+    "                arrow = \"↑\"\n",
+    "            elif \"next\" in description.lower() or \"related\" in description.lower():\n",
+    "                arrow = \"→\"\n",
+    "            else:\n",
+    "                arrow = \"•\"\n",
+    "            \n",
+    "            print(f\"  {arrow} {description:<{max_desc_width}} : {command}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1ef3a136-e84f-4b64-b624-a76e4d43a682",
    "metadata": {},
    "outputs": [],
@@ -368,10 +427,33 @@
     "        print(f\"\\nTry running '{config.cli_command} examples --module {module_name}' to see available features.\")\n",
     "        return\n",
     "    \n",
-    "    print(f\"Example: {example.feature.replace('_', ' ').title()} ({example.module_name} module)\")\n",
+    "    # Show navigation breadcrumbs\n",
+    "    show_navigation_breadcrumbs([\"Examples\", module_name, feature], config)\n",
+    "    \n",
+    "    print(f\"\\nExample: {example.feature.replace('_', ' ').title()} ({example.module_name} module)\")\n",
     "    print(f\"Function: {example.name}\")\n",
     "    print(\"=\" * 60)\n",
-    "    print(example.source)"
+    "    print(example.source)\n",
+    "    \n",
+    "    # Add related navigation commands\n",
+    "    related_commands = [\n",
+    "        (\"Back to module examples\", f\"{config.cli_command} examples -m {module_name}\"),\n",
+    "        (\"View module factories\", f\"{config.cli_command} factories -m {module_name}\"),\n",
+    "        (\"View all examples\", f\"{config.cli_command} examples\"),\n",
+    "    ]\n",
+    "    \n",
+    "    # Find other examples in the same module\n",
+    "    examples = list_module_examples(module_name)\n",
+    "    if examples:\n",
+    "        other_examples = [e for e in examples if e.feature != feature]\n",
+    "        if other_examples and len(other_examples) > 0:\n",
+    "            # Add a related example\n",
+    "            related_example = other_examples[0]\n",
+    "            related_commands.insert(2,\n",
+    "                (\"Related example\", f\"{config.cli_command} example {module_name} {related_example.feature}\")\n",
+    "            )\n",
+    "    \n",
+    "    show_related_commands(related_commands, config)"
    ]
   },
   {
@@ -454,7 +536,10 @@
     "        print(f\"\\nTry running '{config.cli_command} helpers --module {module_name}' to see available helpers.\")\n",
     "        return\n",
     "    \n",
-    "    print(f\"Helper: {helper_info.name} ({helper_info.module_name} module)\")\n",
+    "    # Show navigation breadcrumbs\n",
+    "    show_navigation_breadcrumbs([\"Helpers\", module_name, helper_name], config)\n",
+    "    \n",
+    "    print(f\"\\nHelper: {helper_info.name} ({helper_info.module_name} module)\")\n",
     "    print(f\"Signature: {helper_info.name}{helper_info.signature}\")\n",
     "    print(\"=\" * 60)\n",
     "    print(helper_info.source)\n",
@@ -485,7 +570,26 @@
     "            else:\n",
     "                print(f\"\\nNo test example found that demonstrates the '{helper_name}' helper.\")\n",
     "        else:\n",
-    "            print(f\"\\nNo helper examples test function found in module '{module_name}'.\")"
+    "            print(f\"\\nNo helper examples test function found in module '{module_name}'.\")\n",
+    "    \n",
+    "    # Add related navigation commands\n",
+    "    related_commands = [\n",
+    "        (\"Back to module helpers\", f\"{config.cli_command} helpers -m {module_name}\"),\n",
+    "        (\"View module factories\", f\"{config.cli_command} factories -m {module_name}\"),\n",
+    "        (\"View all helpers\", f\"{config.cli_command} helpers\"),\n",
+    "    ]\n",
+    "    \n",
+    "    # Find other helpers in the same module\n",
+    "    if helpers:\n",
+    "        other_helpers = [h for h in helpers if h.name != helper_name]\n",
+    "        if other_helpers and len(other_helpers) > 0:\n",
+    "            # Add a related helper\n",
+    "            related_helper = other_helpers[0]\n",
+    "            related_commands.insert(2,\n",
+    "                (\"Related helper\", f\"{config.cli_command} helper {module_name} {related_helper.name}\")\n",
+    "            )\n",
+    "    \n",
+    "    show_related_commands(related_commands, config)"
    ]
   },
   {
@@ -551,7 +655,10 @@
     "        print(f\"\\nTry running '{config.cli_command} factories --module {module_name}' to see available factories.\")\n",
     "        return\n",
     "    \n",
-    "    print(f\"Factory: {factory_info.name} ({factory_info.module_name} module)\")\n",
+    "    # Show navigation breadcrumbs\n",
+    "    show_navigation_breadcrumbs([\"Modules\", module_name, factory_name], config)\n",
+    "    \n",
+    "    print(f\"\\nFactory: {factory_info.name} ({factory_info.module_name} module)\")\n",
     "    print(\"=\" * 60)\n",
     "    \n",
     "    # Get detailed info from the factory\n",
@@ -632,7 +739,27 @@
     "            print(f\"  - {helper.name}: {first_line}\")\n",
     "            print(f\"    View with: {get_view_command('helper', mod_name, helper.name)}\")\n",
     "    else:\n",
-    "        print(f\"\\nNo helper functions found that specifically use the '{factory_name}' factory.\")"
+    "        print(f\"\\nNo helper functions found that specifically use the '{factory_name}' factory.\")\n",
+    "    \n",
+    "    # Add related navigation commands\n",
+    "    related_commands = [\n",
+    "        (\"Back to module factories\", f\"{config.cli_command} factories -m {module_name}\"),\n",
+    "        (\"View module examples\", f\"{config.cli_command} examples -m {module_name}\"),\n",
+    "        (\"View all modules\", f\"{config.cli_command} modules\"),\n",
+    "    ]\n",
+    "    \n",
+    "    # Find other factories in the same module\n",
+    "    factories = list_module_factories(module_name)\n",
+    "    if factories:\n",
+    "        other_factories = [f for f in factories if f.name != factory_name]\n",
+    "        if other_factories and len(other_factories) > 0:\n",
+    "            # Add a related factory\n",
+    "            related_factory = other_factories[0]\n",
+    "            related_commands.insert(2, \n",
+    "                (\"Related factory\", f\"{config.cli_command} factory {module_name} {related_factory.name}\")\n",
+    "            )\n",
+    "    \n",
+    "    show_related_commands(related_commands, config)"
    ]
   },
   {
@@ -731,7 +858,10 @@
     "        print(f\"\\nTry running '{config.cli_command} core-utils' to see available utilities.\")\n",
     "        return\n",
     "    \n",
-    "    print(f\"Core Utility: {util_info.name}\")\n",
+    "    # Show navigation breadcrumbs\n",
+    "    show_navigation_breadcrumbs([\"Core Utilities\", util_name], config)\n",
+    "    \n",
+    "    print(f\"\\nCore Utility: {util_info.name}\")\n",
     "    print(f\"Module: {util_info.module}\")\n",
     "    print(f\"Signature: {util_info.name}{util_info.signature}\")\n",
     "    print(\"=\" * 60)\n",
@@ -780,9 +910,24 @@
     "            print(f\"  - {helper.name} ({module_name} module)\")\n",
     "            print(f\"    View with: {get_view_command('helper', module_name, helper.name)}\")\n",
     "    \n",
-    "    # Suggest search for more examples\n",
-    "    print(f\"\\nTo find more usage examples:\")\n",
-    "    print(f\"  {config.cli_command} search {util_name} --include-source\")"
+    "    # Add related navigation commands\n",
+    "    related_commands = [\n",
+    "        (\"Back to core utilities\", f\"{config.cli_command} core-utils\"),\n",
+    "        (\"Search for more usage\", f\"{config.cli_command} search {util_name} --include-source\"),\n",
+    "        (\"View all modules\", f\"{config.cli_command} modules\"),\n",
+    "    ]\n",
+    "    \n",
+    "    # Find other core utilities\n",
+    "    if utilities:\n",
+    "        other_utils = [u for u in utilities if u.name != util_name]\n",
+    "        if other_utils and len(other_utils) > 0:\n",
+    "            # Add a related utility\n",
+    "            related_util = other_utils[0]\n",
+    "            related_commands.insert(1,\n",
+    "                (\"Related utility\", f\"{config.cli_command} core-util {related_util.name}\")\n",
+    "            )\n",
+    "    \n",
+    "    show_related_commands(related_commands, config)"
    ]
   },
   {
