--- a/nbs/cli/utils.ipynb
+++ b/nbs/cli/utils.ipynb
@@ -655,7 +655,7 @@
     "            view_name = item_name\n",
     "            \n",
     "        formatted.append(f\"  - {item_name} ({module_name} module)\")\n",
-    "        formatted.append(f\"    View with: {get_view_command(view_command_type, module_name, view_name)}\")\n",
+    "        formatted.append(f\"    View with: {get_view_command(view_command_type, module_name, view_name)}\\n\")\n",
     "    \n",
     "    return formatted"
    ]
@@ -973,7 +973,24 @@
    "execution_count": null,
    "id": "c60a7f05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<unknown>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[36m(most recent call last)\u001b[39m:\n",
+      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/IPython/core/interactiveshell.py:3699\u001b[39m in \u001b[95mrun_code\u001b[39m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  Cell \u001b[92mIn[29]\u001b[39m\u001b[92m, line 2\u001b[39m\n    import nbdev; nbdev.nbdev_export()\n",
+      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/fastcore/script.py:116\u001b[39m in \u001b[95m_f\u001b[39m\n    if not mod: return func(*args, **kwargs)\n",
+      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/nbdev/doclinks.py:160\u001b[39m in \u001b[95mnbdev_export\u001b[39m\n    _build_modidx()\n",
+      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/nbdev/doclinks.py:116\u001b[39m in \u001b[95m_build_modidx\u001b[39m\n    try: res['syms'].update(_get_modidx((dest.parent/file).resolve(), code_root, nbs_path=nbs_path))\n",
+      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/nbdev/doclinks.py:93\u001b[39m in \u001b[95m_get_modidx\u001b[39m\n    for tree in ast.parse(cell.code).body:\n",
+      "\u001b[36m  \u001b[39m\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/ast.py:50\u001b[39m\u001b[36m in \u001b[39m\u001b[35mparse\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mreturn compile(source, filename, mode, flags,\u001b[39m\n",
+      "  \u001b[36mFile \u001b[39m\u001b[32m<unknown>:14\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mlist_all_examples, get_example_by_name, list_module_examples\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
